public class Account {
    private int balance;
    public Account(){

    }
    int getBalance(){
        return balance;
    }
    void setBalance(int amount){

    }

}


