@startuml
'https://plantuml.com/class-diagram

class Bank
class TextUI
class Customer
class Account

Main *-- TextUI
Main *-- Bank
Bank *-- Customer
Customer *-- Account

Main : + main()

Customer : -int id
Customer : -String name
Customer : -Account account
Customer : -{static} int counter
Customer : +Customer(String name)
Customer : +int getId()
Customer : +String getName()
Customer : +String toString()

Account : - int balance
Account : + int getBalance()
Account : + void setBalance(int amount)


Bank : - ArrayList<Customer> customers
Bank : + int customerLimit
Bank : + void registerCustomer(String name)
Bank : + void displayCustomers()

TextUI : + String getInput(String msg)
TextUI : - Scanner scanner
@enduml